--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -15,11 +15,11 @@
 									<img alt="American DJ Haze Generator Heaterless Fog Machine" src="https://images-na.ssl-images-amazon.com/images/I/41Mp8HpjHvL._AC_UL115_.jpg" class="sims-fbt-image">
 								</div>
 							</span>
-						</li>
-						<li class="a-align-center">
+						</li><!-- no-spacing
+						--><li class="a-align-center">
 							<span class="a-list-item a-size-large a-color-tertiary">+</span>
-						</li>
-						<li class="a-align-center">
+						</li><!-- no-spacing
+						--><li class="a-align-center">
 							<span class="a-list-item">
 								<a class="a-link-normal" href="#">
 									<div class="a-section">
@@ -59,11 +59,11 @@
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" checked="" style="display: inline-block;">
-												<span class="a-label a-checkbox-label">
+												<input type="checkbox" checked="" style="display: inline-block;"><!-- no-spacing
+												--><span class="a-label a-checkbox-label">
 													<div>
-														<span class="sims-fbt-this-item a-text-bold">This item:</span>
-														<span>American DJ Haze Generator Heaterless Fog Machine</span>
+														<span class="sims-fbt-this-item a-text-bold">This item:</span><!-- no-spacing
+														--><span>American DJ Haze Generator Heaterless Fog Machine</span>
 														<span class="a-color-price">$429.99</span>
 													</div>
 												</span>
@@ -77,8 +77,8 @@
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" checked="" style="display: inline-block;">
-												<span class="a-label a-checkbox-label">
+												<input type="checkbox" checked="" style="display: inline-block;"><!-- no-spacing
+												--><span class="a-label a-checkbox-label">
 													<div>
 														<a class="a-size-base a-link-normal" href="#">American DJ Haze/G</a>
 														<span class="a-color-price">$43.99</span>
