Added debug section.

--- a/views/style.css
+++ b/views/style.css
@@ -1,3 +1,10 @@
+/* debug */
+
+/*
+body { background: url('debug.png') -1px 7px no-repeat; }
+img, input[type="submit"] { opacity: 0.5; }
+*/
+
 /* elements */
 
 *
