Removed inline styles.

--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -59,7 +59,7 @@
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" checked="" style="display: inline-block;"><!-- no-spacing
+												<input type="checkbox" checked=""><!-- no-spacing
 												--><span class="a-label a-checkbox-label">
 													<div>
 														<span class="sims-fbt-this-item a-text-bold">This item:</span><!-- no-spacing
@@ -77,7 +77,7 @@
 									<span class="a-declarative">
 										<div class="a-checkbox sims-fbt-checkbox">
 											<label>
-												<input type="checkbox" checked="" style="display: inline-block;"><!-- no-spacing
+												<input type="checkbox" checked=""><!-- no-spacing
 												--><span class="a-label a-checkbox-label">
 													<div>
 														<a class="a-size-base a-link-normal" href="#">American DJ Haze/G</a>
