--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <head>
 </head>
 <body>
